fixup! fix: fix contrast #anchor style

--- a/packages/dnb-ui-lib/src/style/elements/_anchor-mixins.scss
+++ b/packages/dnb-ui-lib/src/style/elements/_anchor-mixins.scss
@@ -129,6 +129,9 @@ $anchorBorderRadius: 0.25rem;
   }
 
   transition: background-color 0.2s ease;
+  [data-dnb-test-wrapper] & {
+    transition: none;
+  }
 
   // other stuff, not related to the Anchor directly
   .dnb-icon {
